                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-10-2005 fixed: Seekbar was broken, should work now
 - 11-10-2005 fixed: paths with commas in my music files
 - 11-10-2005 fixed: bug in my music library albums regarding albums with the same name, aka "greatest hits"
 - 11-10-2005 removed: setting blank or missing music tags to "unknown"
 - 11-10-2005 changed: cleaned up dts/ac3 passtrough code somewhat for dvdplayer
 - 10-10-2005 fixed: videomode override should work for ntsc->pal now.
 - 10-10-2005 updated: mplayer.dll (new ffmpeg, fixes some avi files among other things)
 - 10-10-2005 fixed: control.hasfocus() didn't work on dialogs, only full windows
 - 10-10-2005 changed: how my music files keeps its path history.  this should correct naviagtion issues with overlapping bookmarks, and bookmarks which can traverse into the playlists location.
                       this changes how <default> path and activatewindow with a dest path work.  they are now behave as a virtual bookmark so back from there will display the root bookmark listing.
 - 09-10-2005 removed: my music top 100 window (use the library).
 - 09-10-2005 fixed: dvds wouldn't play.
 - 09-10-2005 changed: some layout stuff regarding video mode override.
 - 09-10-2005 fixed: "bad authorization" message from audioscrobbler on every songsubmission (timed out session).
 - 09-10-2005 fixed: bugs with video mode override.
 - 09-10-2005 fixed: charset converter may waste a byte here and there when converting
 - 09-10-2005 updated: German language file (Thnx to deezle)
 - 09-10-2005 updated: Hungarian language file (Thnx to tcsizmadia)
 - 09-10-2005 updated: Norwegian language file (Thnx to vnm)